Fix menu on mobile

--- a/src/styles/menu.module.sass
+++ b/src/styles/menu.module.sass
@@ -122,16 +122,16 @@
         font-family: 'Open Sans', sans-serif
         font-size: 1.5em
         width: 100%
-        height: 80vh
         text-align: center
         background: hsla(5,5,5,1)
-        transition: display ease-in-out 0.5s
+        b
+            transition: display ease-in-out 0.5s
         li
             display: block
             background: hsla(5,5,5,0.62)
             border-radius: 0.5em
             margin: 0.5em 0
-            padding: 1em
+            padding: 0.75em
             a, a:visited
                 text-decoration: none
                 color: #fefefe
@@ -148,7 +148,8 @@
             display: flex
             align-items: center
             justify-content: center
-            margin-top: 1em
+            margin: 0
+            padding: 0
 .docked
     background: hsla(0,0,0,0.82)
     z-index: 999
@@ -159,8 +160,10 @@
 .githubLink
     display: flex
     padding: 1px
-    align-content: center
-    justify-items: center
+    flex-direction: row
+    align-items: center
+    p
+        margin-left: 0.25em
 .githubLogo
     font-size: 2.5em
     color: #fefefe
